####################################################################
# PersianUltraDNS — a fast, censorship-resilient DNS tunnel
#
# Workspace manifest. Three crates:
#   pud-core    library: protocol, DNS wire codec, FEC, crypto, cache
#   pud-server  binary:  authoritative DNS responder on UDP/53 + TCP egress
#   pud-client  binary:  local SOCKS5 + multipath resolver pool + DNS cache
####################################################################
[workspace]
resolver = "2"
members = [
    "pud-core",
    "pud-server",
    "pud-client",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
authors = ["PersianUltraDNS contributors"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chacha20poly1305 = "0.10"
chacha20 = "0.9"
poly1305 = "0.8"
x25519-dalek = "2"
blake3 = "1.5"
reed-solomon-erasure = "6.0"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
bytes = "1.7"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
