[package]
name = "pud-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "PersianUltraDNS client: local SOCKS5 + multipath resolver pool + DNS cache"

[[bin]]
name = "pud-client"
path = "src/main.rs"

[dependencies]
pud-core = { path = "../pud-core" }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
