[package]
name = "pud-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "PersianUltraDNS core: protocol, DNS wire codec, FEC, crypto, cache"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chacha20 = { workspace = true }
poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
blake3 = { workspace = true }
reed-solomon-erasure = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
chacha20poly1305 = { workspace = true }
