[package]
name = "pud-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "PersianUltraDNS VPS-side authoritative DNS tunnel server"

[[bin]]
name = "pud-server"
path = "src/main.rs"

[dependencies]
pud-core = { path = "../pud-core" }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
